styles.css
/* TOKENS */
:root {
    --text-light: whitesmoke;
    --text-dark: rgb(0, 0, 32);
    --light-border: rgba(255, 255, 255, 0.17);
    --accent-blue: rgb(15, 154, 219);
    --accent-translucent: rgba(15, 154, 219, 0.668);
    --dark-translucent: rgba(15, 154, 219, 0.2);
    --background-color: #000020;

    --text-sm: clamp(0.95rem, 2vw, 1.2rem);
    --text-base: clamp(1.1rem, 2.5vw, 1.5rem);
    --text-lg: clamp(1.3rem, 3vw, 2rem);
    --text-xl: clamp(1.5rem, 3.8vw, 2.2rem);
    --text-hero: clamp(1.8rem, 5vw, 3rem);
}

.electrolize-regular {
  font-family: "Electrolize", sans-serif;
  font-weight: 400;
  font-style: normal;
}


.roboto-mono {
  font-family: "Roboto Mono", monospace;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

/* INTERACTIVE BACKGROUND */
#vanta-bg {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100dvh;
    z-index: -1;
}

/* GENERAL */
html, body {
    padding: 0;
    margin: 0;
}

body {
background-color: transparent;
color: var(--text-light);
font-family: roboto mono;
}

.view {
    display: none;
}

section {
    min-height: calc(100dvh - 70px);
}

.view.active {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
    padding: 2rem 0;
}

/* TEXT SIZES */
h1 {
font-size: var(--text-hero);
}

h2 {
font-size: var(--text-xl);
}

h3 {
font-size: var(--text-lg);
}

p, .list-group-item {
font-size: var(--text-base);
}

.nav-link {
    font-size: var(--text-sm);
}

/* HEADER AND NAV */
header {
    height: 70px;
}

.nav-link,
.navbar-brand,
.navbar-toggler-icon {
color: var(--text-light) !important;
}

.nav-link:hover {
    cursor: pointer;
    background-color: var(--dark-translucent);
    border-radius: 10px;
}

.nav-link.nav-active {
    background-color: var(--dark-translucent);
    border-radius: 10px;
}

.navbar {
    backdrop-filter: blur(3px);
    border-bottom: 1px solid var(--dark-translucent);
    box-shadow: 0px 0px 20px var(--dark-translucent);
    -webkit-backdrop-filter: blur(3px);
    transition: all .3s ease-in-out;
}

/* BUTTONS AND LINKS */
.btn, .lang-btn {
    border: 1px solid var(--accent-blue);
    color: var(--accent-blue);
    background-color: none;
    backdrop-filter: blur(3px);
    font-size: var(--text-sm);
    box-shadow: 0 0 10px var(--accent-translucent);
}

.btn:hover {
    border: 1px solid var(--text-dark);
    background-color: var(--accent-translucent);
    color: var(--text-dark);
}

.project-link {
    font-size: var(--text-sm);
    color: var(--accent-blue);
}

/* CONTENT */
.hero-content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);   
}

.contact-box,
.project-cards,
.about-me,
.skills-card {
    background-color: var(--text-dark);
    border-radius: 20px;
    box-shadow: 0 0 20px var(--accent-translucent);
    color: var(--text-light);
}

.profile-img {
    width: 100%;
    height: auto;
    max-width: 400px;
}

.list-group {
    display: flex;
    justify-content: center;
    align-items: center;
}

.list-group,
.list-group-item {
    background: transparent;
    position: relative;
    color: var(--text-light);
    border-style: none;
}

.list-group-item {
    background-color: var(--dark-translucent);
    width: fit-content;
    text-align: center;
    margin: 5px;
    border-radius: 10px;
}

.video-div {
    border: 1px solid var(--accent-blue);
    border-radius: 5px;
    background-color: var(--dark-translucent);
    box-shadow: 0 0 20px var(--accent-translucent);
    display: flex;
    align-items: center;
    justify-content: center;
}

/* FORM */
.css-form {
    display:none;
}

input[type=text],
input[type=email],
textarea {
    background-color: var(--background-color);
    box-shadow: 0 0 10px var(--accent-translucent);
    border: 1px solid var(--accent-blue);
    border-radius: 4px;
    width: 100%;
    color: var(--text-light);
}

input[type=text]:focus,
input[type=email]:focus,
textarea:focus {
    background-color: var(--dark-translucent);
    box-shadow: 0 0 10px var(--accent-translucent);
    border: 1px solid var(--accent-blue);
    border-radius: 4px;
    color: var(--text-light);
    outline: none;
}

/* To override autofill */
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 1000px var(--dark-translucent) inset !important;
  -webkit-text-fill-color: var(--text-light) !important;
  transition: background-color 5000s ease-in-out 0s;
}

/* MEDIA QUERY */
@media (max-width: 991px) {
    .navbar {
        backdrop-filter: blur(15px);
    }

    .hero-nav {
        padding-top: 15px;
    }

    .video-div {
        height: 200px;
    }
}

